--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+   background-image: linear-gradient(rgb(22, 18, 18), rgb(15, 54, 31)); 
 }
 h1{
     color: white;
@@ -8,15 +8,12 @@ h1{
 h2{
     color: white;
 }
-#title1{
-    margin-top:50px;
-    margin-bottom: 0px;
-    text-align: center;
-}
-#title2{
-    margin-top: 0px;
-    margin-bottom: 30px;
-    text-align: center;
+.gameplayPictures{
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+    width:640px;
+    margin-top:20px;
 }
 #outerContainer{
     display:flex;
@@ -24,32 +21,35 @@ h2{
     align-content: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 50px;
+    
 }
 #videoContainer{
-    border: solid 1px gray;
     height:auto;
     width:auto;
     margin:5px;
+    margin-top:50px;
+}
+#titlePicture{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-    h1{
-        font-size:140%;
-    }
-    h2{
-        font-size: 80%;
-    }
     #actualVideo{
-        width: 301px;
-        height: 213px;
+        width: 280px;
+        height: auto;
     }
+    .gameplayPictures{
+        width: 280px;
+        height: auto;
+    }
+    #titlePicture{
+        display: block;
+        width:350px;
+        margin-left:auto;
+        margin-right:auto;
 
-    #title1{
-        margin-top: 50px;
-        margin-bottom: 0px;
     }
-    #title2{
-    margin-top: 0px;
-    margin-bottom: 10px;
-    text-align: center;
 }
-  }
